crates/zizmor/tests/integration/snapshots/integration__snapshot__excessive_permissions-12.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
expression: "zizmor().input(input_under_test(\"excessive-permissions/reusable-workflow-other-triggers.yml\")).run()?"
snapshot_kind: text
---
warning[excessive-permissions]: overly broad permissions
  --> @@INPUT@@:1:1
   |
 1 | / name: reusable-workflow-other-triggers
 2 | |
...  |
22 | |     # responsible for setting permissions
23 | |     uses: ./.github/workflows/fake.yml
   | |_______________________________________- default permissions used due to no permissions: block
   |
   = note: audit confidence → Medium

warning[excessive-permissions]: overly broad permissions
  --> @@INPUT@@:11:3
   |
11 | /   job1:
12 | |     name: job1
...  |
16 | |     steps:
17 | |       - run: echo hello
   | |                       -
   | |_______________________|
   |                         this job
   |                         default permissions used due to no permissions: block
   |
   = note: audit confidence → Medium

warning[excessive-permissions]: overly broad permissions
  --> @@INPUT@@:19:3
   |
19 | /   job2:
20 | |     name: job2
21 | |     # normal permissions finding here, since callers are always
22 | |     # responsible for setting permissions
23 | |     uses: ./.github/workflows/fake.yml
   | |                                       -
   | |_______________________________________|
   |                                         this job
   |                                         default permissions used due to no permissions: block
   |
   = note: audit confidence → Medium

3 findings: 0 unknown, 0 informational, 0 low, 3 medium, 0 high
