crates/zizmor/tests/integration/snapshots/integration__snapshot__excessive_permissions-2.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
assertion_line: 597
expression: "zizmor().input(input_under_test(\"excessive-permissions/issue-336-repro.yml\")).args([\"--pedantic\"]).run()?"
---
group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
error[excessive-permissions]: overly broad permissions
 --> @@INPUT@@:6:3
  |
6 |   contents: write  # Needed for the workflow
  |   ^^^^^^^^^^^^^^^ contents: write is overly broad at the workflow level
  |
  = note: audit confidence → High

1 finding: 0 informational, 0 low, 0 medium, 1 high
