crates/zizmor/tests/integration/snapshots/integration__snapshot__excessive_permissions-4.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
assertion_line: 615
expression: "zizmor().input(input_under_test(\"excessive-permissions/workflow-read-all.yml\")).run()?"
---
warning[excessive-permissions]: overly broad permissions
 --> @@INPUT@@:5:1
  |
5 | permissions: read-all
  | ^^^^^^^^^^^^^^^^^^^^^ uses read-all permissions
  |
  = note: audit confidence → High

3 findings (2 suppressed): 0 informational, 0 low, 1 medium, 0 high
