crates/zizmor/tests/integration/snapshots/integration__snapshot__excessive_permissions-7.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
assertion_line: 639
expression: "zizmor().input(input_under_test(\"excessive-permissions/jobs-broaden-permissions.yml\")).run()?"
---
warning[excessive-permissions]: overly broad permissions
  --> @@INPUT@@:11:5
   |
 8 | /   job1:
 9 | |     name: job1
10 | |     runs-on: ubuntu-latest
11 | |     permissions: read-all
   | |     ^^^^^^^^^^^^^^^^^^^^^ uses read-all permissions
...  |
14 | |         with:
15 | |           persist-credentials: false
   | |____________________________________- this job
   |
   = note: audit confidence → High

error[excessive-permissions]: overly broad permissions
  --> @@INPUT@@:20:5
   |
17 | /   job2:
18 | |     name: job2
19 | |     runs-on: ubuntu-latest
20 | |     permissions: write-all
   | |     ^^^^^^^^^^^^^^^^^^^^^^ uses write-all permissions
...  |
23 | |         with:
24 | |           persist-credentials: false
   | |_____________________________________- this job
   |
   = note: audit confidence → High

4 findings (2 suppressed): 0 informational, 0 low, 1 medium, 1 high
