crates/zizmor/tests/integration/snapshots/integration__snapshot__excessive_permissions-8.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
expression: "zizmor().input(input_under_test(\"excessive-permissions/workflow-write-explicit.yml\")).run()?"
---
error[excessive-permissions]: overly broad permissions
 --> @@INPUT@@:7:3
  |
7 |   contents: write
  |   ^^^^^^^^^^^^^^^ contents: write is overly broad at the workflow level
  |
  = note: audit confidence → High

error[excessive-permissions]: overly broad permissions
 --> @@INPUT@@:8:3
  |
8 |   id-token: write
  |   ^^^^^^^^^^^^^^^ id-token: write is overly broad at the workflow level
  |
  = note: audit confidence → High

error[excessive-permissions]: overly broad permissions
 --> @@INPUT@@:9:3
  |
9 |   nonexistent: write
  |   ^^^^^^^^^^^^^^^^^^ nonexistent: write is overly broad at the workflow level
  |
  = note: audit confidence → High

3 findings: 1 unknown, 0 informational, 0 low, 0 medium, 2 high
