crates/zizmor/tests/integration/snapshots/integration__snapshot__forbidden_uses-4.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
assertion_line: 813
expression: "zizmor().config(input_under_test(&format!(\"forbidden-uses/configs/{config}.yml\"))).input(input_under_test(\"forbidden-uses/forbidden-uses-menagerie.yml\")).run()?"
---
error[forbidden-uses]: forbidden action used
  --> @@INPUT@@:14:9
   |
14 |       - uses: pypa/gh-action-pypi-publish@release/v1
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ use of this action is forbidden
   |
   = note: audit confidence → High

error[forbidden-uses]: forbidden action used
  --> @@INPUT@@:15:9
   |
15 |       - uses: actions/checkout@v4
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^ use of this action is forbidden
   |
   = note: audit confidence → High

4 findings (2 suppressed): 0 informational, 0 low, 0 medium, 2 high
