crates/zizmor/tests/integration/snapshots/integration__snapshot__forbidden_uses-6.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
expression: "zizmor().config(input_under_test(&format!(\"forbidden-uses/configs/{config}.yml\"))).input(input_under_test(\"forbidden-uses/forbidden-uses-menagerie.yml\")).run()?"
snapshot_kind: text
---
error[forbidden-uses]: forbidden action used
  --> @@INPUT@@:15:9
   |
15 |       - uses: actions/checkout@v4
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^ use of this action is forbidden
   |
   = note: audit confidence → High

1 finding: 0 unknown, 0 informational, 0 low, 0 medium, 1 high
