crates/zizmor/tests/integration/snapshots/integration__snapshot__github_env-3.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
assertion_line: 704
expression: "zizmor().input(input_under_test(\"github-env/issue-397-repro.yml\")).run()?"
---
error[github-env]: dangerous use of environment file
  --> @@INPUT@@:17:9
   |
17 | /         run: |
18 | |           message=$(echo "$TITLE" | grep -oP '[{\[][^}\]]+[}\]]' | sed 's/{\|}\|\[\|\]//g')
19 | |           echo "$message" >> $GITHUB_PATH
   | |_________________________________________^ write to GITHUB_PATH may allow code execution
   |
   = note: audit confidence → Low

4 findings (1 ignored, 2 suppressed): 0 informational, 0 low, 0 medium, 1 high
